{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 32,
  "lineage": "9d15999a-9956-3748-3c01-3f48b57f7a3a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0651f1bab1a933ae5",
            "arn": "arn:aws:ec2:ap-south-1:008829085831:instance/i-0652755c316dc80bf",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0652755c316dc80bf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins-slave",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0660c7c708e255071",
            "private_dns": "ip-10-0-1-18.ap-south-1.compute.internal",
            "private_ip": "10.0.1.18",
            "public_ip": "13.233.59.224",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bdff927f4512dbe7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-053d117d2ab8b59bf",
            "tags": {
              "Name": "dev-server"
            },
            "tags_all": {
              "Name": "dev-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-085ebe459754f356b"
            ]
          },
          "dependencies": [
            "aws_security_group.my-sg",
            "aws_subnet.pubsub-1",
            "data.aws_ami.amazon-linux-image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:008829085831:internet-gateway/igw-02dabb16355ca72a4",
            "id": "igw-02dabb16355ca72a4",
            "owner_id": "008829085831",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0de4d5f899dab4a90"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-rtbl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:008829085831:route-table/rtb-07c73028cb53199b3",
            "id": "rtb-07c73028cb53199b3",
            "owner_id": "008829085831",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02dabb16355ca72a4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-rtbl"
            },
            "tags_all": {
              "Name": "dev-rtbl"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de4d5f899dab4a90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtbl-as-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d9547f49cc4df41",
            "route_table_id": "rtb-07c73028cb53199b3",
            "subnet_id": "subnet-053d117d2ab8b59bf"
          },
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_route_table.my-rtbl",
            "aws_subnet.pubsub-1",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:008829085831:security-group/sg-085ebe459754f356b",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-085ebe459754f356b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "my-sg",
            "name_prefix": "",
            "owner_id": "008829085831",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-sg"
            },
            "tags_all": {
              "Name": "dev-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de4d5f899dab4a90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:008829085831:subnet/subnet-053d117d2ab8b59bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053d117d2ab8b59bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "008829085831",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet"
            },
            "tags_all": {
              "Name": "dev-subnet"
            },
            "vpc_id": "vpc-0de4d5f899dab4a90"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:008829085831:vpc/vpc-0de4d5f899dab4a90",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e69130dc68cfa9b6",
            "default_route_table_id": "rtb-08877fb03c22eeb14",
            "default_security_group_id": "sg-04651b750faf17a4a",
            "dhcp_options_id": "dopt-01bab61b447faeb0c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0de4d5f899dab4a90",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08877fb03c22eeb14",
            "owner_id": "008829085831",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}